chore: fix linting config

--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,9 @@
 		"clientKind": "git",
 		"useIgnoreFile": false
 	},
+	"files": {
+		"ignore": ["dist", "pnpm-lock.yaml", "yarn.lock", "node_modules"]
+	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab",
