--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 	"bugs": {
 		"url": "https://github.com/vsgoulart/camunda-api-zod-schemas/issues"
 	},
-	"keywords": ["camunda", "zod"],
-	"version": "0.0.1",
+	"keywords": [
+		"camunda",
+		"zod"
+	],
+	"version": "0.0.2-beta.0",
 	"type": "module",
 	"license": "MIT",
 	"private": false,
@@ -27,7 +30,9 @@
 		"postpublish": "pnpm changelogen gh release"
 	},
 	"sideEffects": false,
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"exports": {
 		".": {
 			"import": {
