build: simplify build

--- a/package.json
+++ b/package.json
@@ -10,19 +10,14 @@
 	"bugs": {
 		"url": "https://github.com/vsgoulart/camunda-api-zod-schemas/issues"
 	},
-	"keywords": [
-		"camunda",
-		"zod"
-	],
+	"keywords": ["camunda", "zod"],
 	"version": "0.0.2-beta.0",
 	"type": "module",
 	"license": "MIT",
 	"private": false,
 	"scripts": {
 		"dev": "vite",
-		"build": "pnpm run build:src && pnpm run build:types",
-		"build:src": "vite build",
-		"build:types": "tsc -p ./tsconfig.json",
+		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "biome lint --error-on-warnings .",
 		"format": "biome format --write .",
@@ -30,9 +25,7 @@
 		"postpublish": "pnpm changelogen gh release"
 	},
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"exports": {
 		".": {
 			"import": {
@@ -82,7 +75,8 @@
 		"@types/node": "22.7.5",
 		"changelogen": "0.5.7",
 		"typescript": "5.6.3",
-		"vite": "5.4.8"
+		"vite": "5.4.8",
+		"vite-plugin-dts": "4.2.3"
 	},
 	"peerDependencies": {
 		"zod": ">=3.0.0"
