chore: add new linting rule

--- a/biome.json
+++ b/biome.json
@@ -19,5 +19,16 @@
 			"semicolons": "always",
 			"trailingCommas": "all"
 		}
+	},
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"correctness": {
+				"noUnusedImports": {
+					"fix": "safe",
+					"level": "error"
+				}
+			}
+		}
 	}
 }
