--- a/package.json
+++ b/package.json
@@ -76,15 +76,15 @@
 		"access": "public"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.3",
-		"@types/node": "22.7.5",
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "22.9.1",
 		"changelogen": "0.5.7",
 		"typescript": "5.6.3",
-		"vite": "5.4.8",
-		"vite-plugin-dts": "4.2.3"
+		"vite": "5.4.11",
+		"vite-plugin-dts": "4.3.0"
 	},
 	"peerDependencies": {
 		"zod": ">=3.0.0"
 	},
-	"packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
+	"packageManager": "pnpm@9.14.2"
 }
