--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
 	"bugs": {
 		"url": "https://github.com/vsgoulart/camunda-api-zod-schemas/issues"
 	},
-	"keywords": [
-		"camunda",
-		"zod"
-	],
+	"keywords": ["camunda", "zod"],
 	"version": "0.0.2-beta.18",
 	"type": "module",
 	"license": "MIT",
@@ -28,9 +25,7 @@
 		"postpublish": "pnpm changelogen gh release"
 	},
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"exports": {
 		".": {
 			"import": {
@@ -66,6 +61,12 @@
 			"import": {
 				"types": "./dist/identity.d.ts",
 				"default": "./dist/identity.js"
+			}
+		},
+		"./management": {
+			"import": {
+				"types": "./dist/management.d.ts",
+				"default": "./dist/management.js"
 			}
 		},
 		"./package.json": "./package.json"
