--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "dist"
   ],
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/main.d.ts",
-        "default": "./dist/main.js"
-      }
-    },
     "./8.8": {
       "import": {
         "types": "./dist/8.8.d.ts",
         "default": "./dist/8.8.js"
+      }
+    },
+    "./8.8/ad-hoc-sub-process": {
+      "import": {
+        "types": "./dist/8.8/ad-hoc-sub-process.d.ts",
+        "default": "./dist/8.8/ad-hoc-sub-process.js"
       }
     },
     "./8.8/authentication": {
@@ -50,10 +50,100 @@
         "default": "./dist/8.8/authentication.js"
       }
     },
+    "./8.8/authorization": {
+      "import": {
+        "types": "./dist/8.8/authorization.d.ts",
+        "default": "./dist/8.8/authorization.js"
+      }
+    },
+    "./8.8/batch-operation": {
+      "import": {
+        "types": "./dist/8.8/batch-operation.d.ts",
+        "default": "./dist/8.8/batch-operation.js"
+      }
+    },
+    "./8.8/clock": {
+      "import": {
+        "types": "./dist/8.8/clock.d.ts",
+        "default": "./dist/8.8/clock.js"
+      }
+    },
+    "./8.8/cluster": {
+      "import": {
+        "types": "./dist/8.8/cluster.d.ts",
+        "default": "./dist/8.8/cluster.js"
+      }
+    },
+    "./8.8/decision-definition": {
+      "import": {
+        "types": "./dist/8.8/decision-definition.d.ts",
+        "default": "./dist/8.8/decision-definition.js"
+      }
+    },
+    "./8.8/decision-instance": {
+      "import": {
+        "types": "./dist/8.8/decision-instance.d.ts",
+        "default": "./dist/8.8/decision-instance.js"
+      }
+    },
+    "./8.8/decision-requirements": {
+      "import": {
+        "types": "./dist/8.8/decision-requirements.d.ts",
+        "default": "./dist/8.8/decision-requirements.js"
+      }
+    },
+    "./8.8/document": {
+      "import": {
+        "types": "./dist/8.8/document.d.ts",
+        "default": "./dist/8.8/document.js"
+      }
+    },
+    "./8.8/element-instance": {
+      "import": {
+        "types": "./dist/8.8/element-instance.d.ts",
+        "default": "./dist/8.8/element-instance.js"
+      }
+    },
+    "./8.8/group": {
+      "import": {
+        "types": "./dist/8.8/group.d.ts",
+        "default": "./dist/8.8/group.js"
+      }
+    },
+    "./8.8/incident": {
+      "import": {
+        "types": "./dist/8.8/incident.d.ts",
+        "default": "./dist/8.8/incident.js"
+      }
+    },
+    "./8.8/job": {
+      "import": {
+        "types": "./dist/8.8/job.d.ts",
+        "default": "./dist/8.8/job.js"
+      }
+    },
     "./8.8/license": {
       "import": {
         "types": "./dist/8.8/license.d.ts",
         "default": "./dist/8.8/license.js"
+      }
+    },
+    "./8.8/mapping-rule": {
+      "import": {
+        "types": "./dist/8.8/mapping-rule.d.ts",
+        "default": "./dist/8.8/mapping-rule.js"
+      }
+    },
+    "./8.8/message": {
+      "import": {
+        "types": "./dist/8.8/message.d.ts",
+        "default": "./dist/8.8/message.js"
+      }
+    },
+    "./8.8/process-definition": {
+      "import": {
+        "types": "./dist/8.8/process-definition.d.ts",
+        "default": "./dist/8.8/process-definition.js"
       }
     },
     "./8.8/process-instance": {
@@ -62,10 +152,40 @@
         "default": "./dist/8.8/process-instance.js"
       }
     },
-    "./8.8/process-definition": {
+    "./8.8/resource": {
       "import": {
-        "types": "./dist/8.8/process-definition.d.ts",
-        "default": "./dist/8.8/process-definition.js"
+        "types": "./dist/8.8/resource.d.ts",
+        "default": "./dist/8.8/resource.js"
+      }
+    },
+    "./8.8/role": {
+      "import": {
+        "types": "./dist/8.8/role.d.ts",
+        "default": "./dist/8.8/role.js"
+      }
+    },
+    "./8.8/signal": {
+      "import": {
+        "types": "./dist/8.8/signal.d.ts",
+        "default": "./dist/8.8/signal.js"
+      }
+    },
+    "./8.8/tenant": {
+      "import": {
+        "types": "./dist/8.8/tenant.d.ts",
+        "default": "./dist/8.8/tenant.js"
+      }
+    },
+    "./8.8/usage-metrics": {
+      "import": {
+        "types": "./dist/8.8/usage-metrics.d.ts",
+        "default": "./dist/8.8/usage-metrics.js"
+      }
+    },
+    "./8.8/user": {
+      "import": {
+        "types": "./dist/8.8/user.d.ts",
+        "default": "./dist/8.8/user.js"
       }
     },
     "./8.8/user-task": {
@@ -80,22 +200,10 @@
         "default": "./dist/8.8/variable.js"
       }
     },
-    "./8.8/decision-definition": {
-      "import": {
-        "types": "./dist/8.8/decision-definition.d.ts",
-        "default": "./dist/8.8/decision-definition.js"
-      }
-    },
-    "./8.8/job": {
-      "import": {
-        "types": "./dist/8.8/job.d.ts",
-        "default": "./dist/8.8/job.js"
-      }
-    },
     "./package.json": "./package.json"
   },
-  "main": "./dist/main.js",
-  "types": "./dist/main.d.ts",
+  "main": "./dist/8.8.js",
+  "types": "./dist/8.8.d.ts",
   "publishConfig": {
     "access": "public"
   },
