--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 	"bugs": {
 		"url": "https://github.com/vsgoulart/camunda-api-zod-schemas/issues"
 	},
-	"keywords": ["camunda", "zod"],
+	"keywords": [
+		"camunda",
+		"zod"
+	],
 	"version": "0.0.2-beta.56",
 	"type": "module",
 	"license": "MIT",
@@ -25,7 +28,9 @@
 		"postpublish": "pnpm changelogen gh release"
 	},
 	"sideEffects": false,
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"exports": {
 		"./8.8": {
 			"import": {
@@ -208,6 +213,7 @@
 		"changelogen": "0.6.1",
 		"typescript": "5.8.3",
 		"vite": "6.3.5",
+		"vite-plugin-circular-dependency": "^0.5.0",
 		"vite-plugin-dts": "4.5.4"
 	},
 	"peerDependencies": {
