--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"camunda",
 		"zod"
 	],
-	"version": "1.0.0",
+	"version": "1.0.1-beta.0",
 	"type": "module",
 	"license": "MIT",
 	"private": false,
