--- a/package.json
+++ b/package.json
@@ -336,7 +336,7 @@
 		"changelogen": "0.6.1",
 		"typescript": "5.8.3",
 		"vite": "7.0.0",
-		"vite-plugin-circular-dependency": "^0.5.0",
+		"vite-plugin-circular-dependency": "0.5.0",
 		"vite-plugin-dts": "4.5.4"
 	},
 	"peerDependencies": {
