refactor: replace biome with prettier

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"lint": "biome lint --error-on-warnings .",
-		"format": "biome format --write .",
+		"format": "prettier --write .",
 		"prepublish": "pnpm run lint && pnpm run build",
 		"postpublish": "pnpm changelogen gh release"
 	},
@@ -331,7 +330,6 @@
 		"access": "public"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.1.1",
 		"@types/node": "24.0.13",
 		"changelogen": "0.6.2",
 		"typescript": "5.8.3",
